--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 repository = "https://github.com/omninbs/rsnbs"
 readme = "README.md"
 keywords = ["nbs", "music", "minecraft", "file-format"]
-categories = ["file-format", "audio", "games"]
+categories = ["games"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
